# lightlist

./: .gitignore  CMakeLists.txt  lightlist.c
.cache/clangd/index/: cJSON.c.7903B768BFBFF175.idx  cJSON.h.D112659D4DADF130.idx  lightlist.c.96543968B96852DB.idx
textmenu/: textmenu.c  textmenu.h
